@@ -1,6 +1,11 @@
 2013-02-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2013-01-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR rtl-optimization/55838
+	* gcc.dg/pr55838.c: New test.
+
 	2012-12-13  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/55652
